# bq27xxx-rs

./: Cargo.toml  LICENSE  README.md
src/: defs.rs  fmt.rs  known_chips.rs  lib.rs  memory.rs  registers.rs
